# anysdk-mcp

./: LICENSE  README.md
anysdk-mcp/: README.md  README_MCP_SETUP.md  SETUP.md  demo.py  inspector_config.json  launch_inspector.sh  main.py  mcp_config.json  mcp_server.py  pyproject.toml  server.py  solution.md  test.sh
anysdk-mcp/configs/: azure.yaml  github.yaml  k8s.yaml
anysdk-mcp/mcp_sdk_bridge/: __init__.py  cli.py
anysdk-mcp/mcp_sdk_bridge/adapters/: __init__.py  auto_azure.py  auto_github.py  auto_k8s.py  github.py  k8s.py
anysdk-mcp/mcp_sdk_bridge/ai/: __init__.py  enrich.py
anysdk-mcp/mcp_sdk_bridge/core/: __init__.py  classify.py  discover.py  lro.py  paginate.py  planapply.py  safety.py  schema.py  serialize.py  streaming.py  wrap.py
anysdk-mcp/mcp_sdk_bridge/testing/: __init__.py  validator.py
anysdk-mcp/tests/: test_azure_auto.py  test_contracts.py  test_e2e.py  test_github_tool.py  test_server.py  test_smoke_mcp.py
